fix image ans quote
The image was cropped down in order to look a little better IMO. Also the quote is not italized and the author is a little smaller.

--- a/css/Styles.css
+++ b/css/Styles.css
@@ -86,11 +86,13 @@ ul, li {
 }
 #quote {
     text-align: center;
+    font-style: italic
 }
 
 #author {
     margin-top: 20px;
     text-align: center;
+    font-size: 90%
 }
 .project-description-space {
     margin-bottom:10px;
